# queer-augsburg

./: .gitlab-ci.yml
backup/: Dockerfile  crontab
backup/src/: backup_script.py  healthcheck.py
deployment/: README.md  config.yml  start.sh  stop.sh
deployment/templates/: admin.yml  docker-compose.yml  secrets.env
deployment/templates/config/: interossea-redirects.env  interossea-server.yml  interossea-web-ui.yml  ofelia.conf  qa-server.yml  qa-web-ui.yml  qa-web.yml
frontend/: index.html  package.json
frontend/src/: App.tsx  index.scss  types.tsx
frontend/src/components/: Event.tsx  Logo.tsx  Nav.tsx
frontend/src/pages/: Treffen.tsx  Wir.tsx
server/: .gitignore  Cargo.toml  Dockerfile
server/dev/: config.yml
server/src/: config.rs  db.rs  interossea.rs  lib.rs  macros.rs  main.rs  old_meetings.json  types.rs  utils.rs
server/src/methods/: accept_member_application.rs  admin_create_member.rs  create_own_user.rs  get_meetings.rs  get_own_user.rs  get_users.rs  ical.rs  update_meeting.rs  update_member_status.rs  update_own_member_data.rs
utils/: get_member_timestamps.ts  insert_papier.ts  send_mail.ts  update_types.ts
web/: Dockerfile  build.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: config.json
web/server/: config.yml
web/src/: App.tsx  api.ts  convert.ts  index.scss  main.tsx  sw.ts  types.tsx  utils.ts  utils.tsx
web/src/apiTypes/: AcceptMemberApplicationRequestBody.ts  Address.ts  ChangedMeeting.ts  CommonMeetingTag.ts  GetMeetingsResponseBody.ts  GetUsersResponseBody.ts  Meeting.ts  (+18 more)
(+28 files in other folders)
