[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", default-features = false, features = [
    "server",
    "http1",
    "tcp",
    "stream",
    "http2",
] }
tokio = { version = "1.41.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
] }
validator = { version = "0.16.1", features = ["derive", "phone"] }
lettre = { version = "0.11.10", default-features = false, features = [
    "rustls-tls",
    "smtp-transport",
    "hostname",
    "builder",
] }


bytes = "1"

mongodb = { version = "2.3.1", features = ["bson-serde_with"] }
futures = "0.3"
bson = "2.4.0"

serde = { version = "1.0", features = [
    "derive",
    "std",
], default-features = false }
serde_yaml = { version = "0.9.34+deprecated" }
serde_json = { version = "1" }
anyhow = "1"
lazy_static = "1.3.0"

jsonwebtoken = "8"
reqwest = { version = "0.11.12", default-features = false, features = [
    "rustls-tls",
] }
once_cell = "1"
cookie = "0.17.0"
chrono = "0.4.22"
rand = "0.8.5"
qstring = "0.7.2"
ts-rs = "7.0.0"
